--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,63 @@
-.App {
-  text-align: center;
+.App{
+	width: 100%;
+	height: 100vh;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+*{
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.Sidebar{
+	height: 100%;
+	width: 250px;
+	background-color: #2d445d;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.SidebarList{
+	height: auto;
+	padding: 0%;
+	width: 100%;
 }
 
-.App-link {
-  color: #61dafb;
+.SidebarList #active{
+  background-color: #3b627a;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.SidebarList .row{
+	width: 100%;
+	height: 60px;
+	/* background-color: rgb(5, 54, 36); */
+	/* display: flex; */
+	color: white;
+	/* justify-content: center; */
+	text-align: center;
+	padding: 7%;
+}
+
+.SidebarList .row:hover{
+	cursor: pointer;
+	background-color: #3b627a;
+}
+
+.row #title{
+	flex: 70%
+}
+
+.SidebarIcon{
+	padding-top: 20px;
+	padding-bottom: 15px;
+	text-align: center;
+}
+
+.SidebarIcon img{
+	width: 100px;
+	border-radius:50%;
+}
+
+.SidebarIcon p{
+	color: white;
+	font-weight: 600;
+	font-size: 15px;
 }
